# roaringrange

./: .gitignore  .goreleaser.yaml  BM25.md  CLAUDE.md  FACETS.md  FORMAT.md  HOTCACHE.md  LOOKUP.md  README.md  RECORDS.md  SORTCOLS.md  SPLITSET.md  TASK_bm25_minmatch.md  TERMS.md  VECTORS.md  batch_test.go  bm25.go  bm25_read.go  bm25_read_test.go  bm25_test.go  coverage_test.go  facets.go  facets_read.go  facets_read_test.go  facets_test.go  format.go  go.mod  go.sum  hotcache.go  hotcache_read.go  hotcache_read_test.go  hotcache_test.go  info_builtin.go  lookup.go  lookup_read.go  lookup_read_test.go  lookup_test.go  monolithbuild.go  monolithbuild_test.go  ngram.go  (+32 more)
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release-cli.yml  release.yml
cmd/roaringrange/: dump.go  dumpers.go  get.go  main.go  main_test.go  records.go  util.go
conformance/: conformance_test.go  go.mod  go.sum
examples/embed-lambda/: .dockerignore  .gitignore  Dockerfile  README.md  export_model.py  handler.py  requirements.txt
examples/hybrid-search-lambda/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
examples/hybrid-search-lambda/examples/: embed_check.rs
examples/hybrid-search-lambda/src/: embed.rs  main.rs
examples/openalex/: README.md  deploy.sh  download.sh  ec2-full-build.sh  go.mod  go.sum  main.go  rebuild-monolith.sh  (+1 more)
examples/openalex/builder/: Cargo.toml
examples/openalex/builder/examples/: query.rs  smoke_check.rs
examples/openalex/builder/src/: headtune.rs  main.rs  phased.rs  secondary.rs  transcode.rs
examples/search-lambda/: Cargo.toml
examples/search-lambda/examples/: repro.rs
examples/search-lambda/src/: main.rs
examples/term-search-lambda/: Cargo.toml
examples/term-search-lambda/src/: main.rs
go/: bm25.go  bm25_test.go  coverage_test.go  geosplit_test.go  go.mod  go.sum  goldentest_test.go  hotcache.go  lookup.go  monolithbuild.go  ngram.go  ngram_test.go  reader.go  records.go  records_test.go  roaringrange.go  sortcols.go  sortcols_test.go  splitset.go  splitset_test.go  splitsetbuild.go  splitsetbuild_test.go  terms.go  termsplitsetbuild.go  transcode.go  transcode_test.go
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/python_src/roaringrange/: __init__.py  __init__.pyi
python/scripts/: bench_embedders.py  build_full_rrvi.py  build_full_rrvi_gemma.py  build_openalex_rrvi.py  build_rrvi_from_memmap.py  build_term_index.py  build_term_index_stream.py  faiss_to_rrvi.py  gemma_embed.py  model2vec_embed.py  model2vec_export.py  query_openalex_rrvi.py  rrvi_stream.py
python/src/: lib.rs
python/tests/: test_roaringrange.py
reader/: Cargo.toml  README.md
reader/src/: build.rs  build_tests.rs  catalog.rs  facet.rs  fetch.rs  index.rs  lib.rs  ngram.rs  records.rs  wasm.rs
rust/: Cargo.toml  README.md
rust/examples/: bench_facet_counts.rs  bm25_minmatch_eval.rs  bm25_query.rs  build_catalog_rrhc.rs  build_global_bloom.rs  build_impacts.rs  build_term_splitset.rs  build_trigram_monolith.rs  build_trigram_splitset.rs  candidates.rs  check_split_facet.rs  cursor_page_check.rs  density.rs  derive_split_facets.rs  dump_record.rs  dump_records.rs  facet_meta_dump.rs  facet_wave_probe.rs  gen_records_zstd_fixture.rs  gen_rrhc_golden.rs  gen_rril_golden.rs  gen_rrs_monolith_cs_golden.rs  gen_rrs_monolith_golden.rs  gen_rrsb_golden.rs  gen_rrsc_golden.rs  gen_rrvi_golden.rs  gen_synth_records.rs  gen_tokenizer_stem_golden.rs  gen_zstd_fixture.rs  get_records.rs  live_bench.rs  m2v_embed.rs  query_rrs.rs  rrt_query.rs  rrvi_query.rs  secondary.rs  slice_term_monolith.rs  slice_trigram_monolith.rs  splitset_bench.rs  splitset_demo_data.rs  (+5 more)
rust/src/: bm25.rs  build.rs  build_tests.rs  catalog.rs  facet.rs  fetch.rs  fetch_window.rs  fuzz_tests.rs  hotcache.rs  hotcache_build.rs  index.rs  lib.rs  lookup.rs  model2vec.rs  ngram.rs  posting.rs  range_cache.rs  records.rs  secondary.rs  sortcols.rs  splitset.rs  splitset_build.rs  splitset_bundle.rs  splitset_write.rs  terms.rs  terms_build.rs  terms_dict.rs  vector.rs  vector_build.rs  wasm.rs
rust/tests/: splitset_bundle.rs  vector.rs  wasm_zstd.rs
rust/tests/fixtures/: records.dict  records.expect
stopwords/: arabic.txt  english.txt  finnish.txt  french.txt  german.txt  portuguese.txt
tasks/: 001_record_compression.done.md  001_record_compression.md  002_full_corpus_build.done.md  002_full_corpus_build.md  003_secondary_index.done.md  003_secondary_index.in-progress.md  004_vector_search.in-progress.md  005_fst_term_index.done.md  005_fst_term_index.in-progress.md  006_catalog_hotcache.done.md  006_catalog_hotcache.md  007_split_set_index.done.md  007_split_set_index.in-progress.md  008_usability_review.in-progress.md  009_rrti_blocked_dictionary.done.md  010_go_fst_port.done.md  010_go_fst_port.md  011_go_snowball_stemmer_port.done.md  011_go_snowball_stemmer_port.in-progress.md  012_fst_rust_perf_investigation.done.md  012_fst_rust_perf_investigation.in-progress.md  012a_issue_a_inline_transitions_draft.md  013_parallel_splitset_builder.md  014_rrs_tail_paging_followups.md  015_splitset_in_main_demo.done.md  015_splitset_in_main_demo.md  016_rrs_v3_head_tail_collapse.done.md  016_rrs_v3_head_tail_collapse.in-progress.md  017_secondary_index_demo_lambda.md  018_fst_upstream_contribution.md  019_splitset_deferred_enhancements.md  020_rrti_deploy_and_later_phases.md  021_gemma_full_corpus_rrvi.md  022_v3_cutover_and_split_enable.done.md  022_v3_cutover_and_split_enable.md  023_cost_based_query_routing.in-progress.md  024_facet_container_probes.done.md  025_rarest_first_container_intersection.done.md  025_rarest_first_container_intersection.md  026_exact_counts_from_container_headers.md  (+78 more)
testdata/: records_go_zstd.idx  rrhc_build_golden.txt  rrhc_bundle_build_golden.txt  rrhc_term_bundle_build_golden.txt  rrs_monolith_cs_build_golden.txt  rrsc_build_golden.txt  rrss_build_golden.txt  rrss_digest_build_golden.txt  rrss_digest_v2_build_golden.txt  rrti_term_split_cs_golden.txt  rrti_term_split_golden.txt  rrvi_build_golden.txt  tokenizer_stem_golden.txt
(+25 files in other folders)
