[package]
name = "roaringrange-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for building roaringrange static, range-fetchable search datasets"
license = "MIT"
repository = "https://github.com/freeeve/roaringrange"

# Builds a Python extension module named `roaringrange`. The build logic is
# reused from the core Rust crate; this crate is only the PyO3 glue. The dep is
# aliased to `roaringrange_core` so it doesn't clash with this lib's own name.
[lib]
name = "roaringrange"
crate-type = ["cdylib"]

[dependencies]
# `extension-module` defers libpython symbols to import time (maturin sets the
# macOS `-undefined dynamic_lookup` flag); `abi3-py38` builds one wheel for
# CPython 3.8+ instead of one per minor version.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
roaring = "0.11"
# `vector` enables the core's IVFPQ trainer/writer (`build_ivfpq`/`Ivfpq`) that
# the `VectorBuilder` binding wraps. Adds no third-party deps (pure-Rust k-means).
# `terms` enables the core's `RRTI` term-index writer (`write_term_index`) that
# the `write_term_index` binding wraps (pulls in the `fst` crate).
roaringrange_core = { package = "roaringrange", path = "../rust", features = ["vector", "terms"] }
