[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "roaringrange"
version = "0.1.0"
description = "Build static, range-fetchable full-text search datasets (RRS/RRSF/RRSR) from Python — search millions of records in the browser with no backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "freeeve" }]
keywords = ["search", "full-text", "roaring", "static-site", "serverless"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Indexing",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/freeeve/roaringrange"

[tool.maturin]
# The Cargo crate name is `roaringrange-python` but the import name is
# `roaringrange` (set by [lib] name in Cargo.toml).
manifest-path = "Cargo.toml"
strip = true
