[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "roaringrange"
version = "0.1.0"
description = "Build static, range-fetchable full-text search datasets (RRS/RRSF/RRSR) from Python — search millions of records in the browser with no backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "freeeve" }]
keywords = ["search", "full-text", "roaring", "static-site", "serverless"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Indexing",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
# For the FAISS -> RRVI export path (python/scripts/faiss_to_rrvi.py). The
# extension wheel itself has no runtime dependencies.
train = ["numpy>=1.21", "faiss-cpu>=1.7"]
# For the model2vec build-time embedder (python/scripts/model2vec_embed.py).
embed = ["numpy>=1.21", "model2vec>=0.3"]
# For the EmbeddingGemma (mode-1) embedder (python/scripts/gemma_embed.py). The
# model is license-gated: accept the terms on HF and `huggingface-cli login`.
gemma = ["numpy>=1.21", "sentence-transformers>=5.0"]

[project.urls]
Repository = "https://github.com/freeeve/roaringrange"

[tool.maturin]
# The Cargo crate name is `roaringrange-python` but the import name is
# `roaringrange` (set by [lib] name in Cargo.toml).
manifest-path = "Cargo.toml"
strip = true
# Mixed layout: the `roaringrange` package (with the hand-written type stub
# `__init__.pyi` + `py.typed` marker) lives here; maturin drops the compiled
# extension into it. This is what gives IDEs/mypy signatures for the bindings.
python-source = "python_src"
