[package]
name = "roaringrange"
version = "0.1.0"
edition = "2021"
description = "Static, range-fetchable full-text search on roaring bitmaps: reader, build writers, and WASM bindings"
license = "MIT"
repository = "https://github.com/freeeve/roaringrange"

[lib]
crate-type = ["cdylib", "rlib"]

# The RRVI query harness needs the (non-default) `vector` feature; gating it here
# keeps `cargo build --examples` / `clippy --all-targets` green without it.
[[example]]
name = "rrvi_query"
required-features = ["vector"]

# Dumps record text for the embedder; needs `zstd` to inflate a compressed store.
[[example]]
name = "dump_records"
required-features = ["zstd"]

# In-browser model2vec embedder validation harness; needs the `vector` feature.
[[example]]
name = "m2v_embed"
required-features = ["vector"]

# Query a built `.rrt` term index (search/prefix/fuzzy/complete); needs `terms`.
[[example]]
name = "rrt_query"
required-features = ["terms"]

# Side-by-side monolith-vs-split-set byte/request benchmark; needs `splits`.
[[example]]
name = "splitset_bench"
required-features = ["splits"]

# Head-to-head: trigram (RRS) vs term/FST (RRTI) split set over the same corpus.
[[example]]
name = "term_vs_trigram_bench"
required-features = ["splits", "terms"]

# Worked queue-as-WAL ingestion client over the pure SplitSetWriter; needs `splits`.
[[example]]
name = "splitset_ingest"
required-features = ["splits"]

# Generates the standalone split-set demo's sample artifacts; needs `splits`.
[[example]]
name = "splitset_demo_data"
required-features = ["splits"]

# Slices the monolith .rrf into full per-split facet sidecars; needs `splits`.
[[example]]
name = "derive_split_facets"
required-features = ["splits"]

# Native parallel, bounded-RAM term split-set builder over an RRSR record store
# (records are zstd-compressed, so the reader needs the `zstd` decode path too).
[[example]]
name = "build_term_splitset"
required-features = ["splits", "terms", "zstd"]

# Trigram sibling of build_term_splitset: a trigram (`RRS`-bodied) split set over the same
# `RRSR` record store, emitting the manifest, splits, per-split `.rrf`, and `.rrhc` boot bundle.
[[example]]
name = "build_trigram_splitset"
required-features = ["splits", "zstd", "hotcache"]

# Single-index sibling of build_trigram_splitset: folds the whole record store into one v3 `RRS`
# monolith (`openalex-full.rrs`) via the chunked partial→merge path. `.rrf`/`.rril` are reused.
[[example]]
name = "build_trigram_monolith"
required-features = ["zstd"]

# Opens an RRSS split set from disk and runs a query — a smoke check for a built split set.
[[example]]
name = "splitset_verify"
required-features = ["splits"]

[[example]]
name = "live_bench"
required-features = ["terms", "splits", "vector"]

[[example]]
name = "splitset_strip_summaries"
required-features = ["splits"]

# Composes the catalog .rrhc boot bundle from the monolith members' boot regions.
[[example]]
name = "build_catalog_rrhc"
required-features = ["hotcache"]

[dependencies]
roaring = "0.11"
# Unicode general-category lookup so the tokenizer filters exactly on letters
# (L*) and decimal digits (Nd), matching the Go builder's `unicode.IsLetter ||
# unicode.IsDigit`. Pure data table, no transitive deps, builds for wasm.
unicode-general-category = "1"
# NFD decomposition for the model2vec BERT normalizer's accent stripping. Pure
# data table, wasm-safe; optional, pulled in only by the `vector` feature.
unicode-normalization = { version = "0.1", optional = true }
# `join_all` (futures-util) drives the concurrent read waves; `executor`
# provides `block_on` for the native tests. Default features are disabled to
# keep the native build light: only the std combinators and the executor are
# pulled in (no `async-await` macros).
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }

# FST used as the `RRTI` v2 dictionary's resident block router: a small FST mapping
# each front-coded block's last term -> its byte range (the Quickwit/tantivy-sstable
# shape). Pure-Rust and wasm-safe — the same crate Tantivy/Meilisearch use. Optional,
# behind the `terms` feature; `default-features = false` keeps the optional `mmap`
# extra out (and the `levenshtein` automaton is no longer needed — typo/substring
# search routes to the trigram `RRS` index).
# Forked fst (BurntSushi 0.4.7 + inline single-transition builder nodes): ~17x
# fewer build allocations / ~30% faster index builds, byte-identical output.
fst = { git = "https://github.com/freeeve/fst", branch = "inline-transitions", optional = true, default-features = false }
# Snowball stemmers for the optional `terms` stemming filter — the same pure-Rust
# crate Tantivy uses. wasm-safe (no C), so the browser reader can stem queries to
# match a stemmed index (build/query symmetry). Optional, pulled in by `terms`.
rust-stemmers = { version = "1", optional = true }

# All wasm deps stay behind the `wasm` feature; the crate builds and `cargo
# test`s natively without it.
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

# Optional zstd record compression with a shared dictionary, behind the `zstd`
# feature. Two codecs split by direction so the same feature works on every
# target:
#   - `ruzstd` (pure Rust) drives the DECODE path the reader/wasm needs. Decode
#     WITH a shared dictionary is public since 0.8.2 — which is all the browser
#     needs (it only ever decompresses; it never compresses).
#   - `zstd` (C `libzstd`) drives the native ENCODE + dictionary-TRAIN path
#     ([`build::write_records_zstd`]/[`build::train_record_dict`]). It is declared
#     under the `cfg(not(wasm32))` target table below, so Cargo never compiles
#     libzstd's C/asm for the browser reader.
ruzstd = { version = "0.8", optional = true }

# The C-backed `zstd` crate (native ENCODE + dictionary TRAIN) lives under this
# target table so it is NEVER compiled for wasm32 — libzstd's C/asm does not build
# for that target. On native it is pulled in by the `zstd` feature; on wasm the
# `zstd` feature pulls only `ruzstd` (decode). `zdict_builder` enables
# `zstd::dict::from_samples` (the dictionary trainer), off by default in the crate.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = { version = "0.13", optional = true, features = ["zdict_builder"] }

[dev-dependencies]
# Drives the wasm32 integration test (tests/wasm_zstd.rs, itself gated to
# `cfg(target_arch = "wasm32")`) under `wasm-pack test --node`, proving the ruzstd
# decode path runs in a wasm runtime.
wasm-bindgen-test = "0.3"
# `block_on` for the native integration tests (e.g. tests/vector.rs, which drives
# the async `RangeFetch` reader). Already a crate dependency; declared here too so
# the separate test crate can reach it. No new external crate is pulled in.
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
# Example-only: the parallel term split-set builder fans record JSON parsing across a
# rayon pool and parses with serde_json. Not used by the library/reader.
rayon = "1"
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
]

[features]
# The `wasm` feature gates a fetch()-backed RangeFetch implementation and the
# wasm-bindgen glue. The core crate builds and tests on the host target without
# it. Build the browser reader with `wasm-pack build --target web --features wasm`.
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
]

# Optional per-record zstd compression with a shared dictionary. Additive: with
# the feature off the reader still reads raw (tag-0) records byte-for-byte, and a
# tag-1 (compressed) record surfaces a clear error instead of decompressing. The
# DECODE path compiles on every target (pure-Rust `ruzstd`); the C-backed encode
# and dictionary trainer are native-only (see the dependency comments). Build the
# browser reader that must inflate records with
# `wasm-pack build --target web --features "wasm zstd"`.
zstd = [
    "dep:ruzstd",
    # The C `zstd` crate is native-only; on wasm32 it is excluded by the cfg
    # gates on the encode/train code, and Cargo will not pull it for that target.
    "dep:zstd",
]

# Range-fetchable similarity (vector) search: the `RRVI` IVFPQ reader and the
# native build-side trainer/writer. Pure Rust — adds NO dependencies — so it
# compiles for wasm too (only the reader; the trainer is native-only via a cfg).
# Off by default to keep the core lean; enable with `--features vector`. CI and
# the pre-push hook run the crate's gates a second time with this feature on.
# Pulls `unicode-normalization` for the model2vec BERT normalizer (the only extra
# dependency in the whole vector feature).
vector = ["dep:unicode-normalization"]

# Range-fetchable term-level inverted index: the `RRTI` FST-dictionary reader and
# the native build-side writer. Off by default; enable with `--features terms`.
# Its only dependency is the pure-Rust `fst` crate. The reader is wasm-safe; the
# builder is native-only (excluded from wasm32 via a cfg in lib.rs).
terms = ["dep:fst", "dep:rust-stemmers"]

# Cross-format catalog hotcache: the `RRHC` boot accelerator. One small `.rrhc`
# inlines every member's small boot region and references the few large ones, so a
# composition boots in 1–2 round trips instead of N cold opens. Pure Rust — adds NO
# dependencies. The reader is wasm-safe; the builder is native-only (excluded from
# wasm32 via a cfg in lib.rs). Off by default; enable with `--features hotcache`.
hotcache = []

# Range-fetchable split set: the `RRSS` manifest reader + native writer over many
# byte-capped immutable `RRS` splits, queried with pruning (rank tiering) and a
# base+delta lifecycle. Pure Rust — adds NO dependencies. The reader is wasm-safe; the
# builder is native-only (excluded from wasm32 via a cfg in lib.rs). Off by default;
# enable with `--features splits`.
splits = []
