[package]
name = "hybrid-search-lambda"
version = "0.1.0"
edition = "2021"
publish = false

# The custom runtime expects a binary named `bootstrap`.
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# Same readers the browser runs: trigram Index / TermIndex+ImpactIndex (text arm) +
# VectorIndex + reciprocal_rank_fusion (vector arm + fusion). `terms` gates BM25/term,
# `vector` gates the IVFPQ reader + RRF.
roaringrange = { path = "../../rust", features = ["terms", "vector"] }
roaring = "0.11"
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde_json = "1"
# In-region HTTP GET to the embed Lambda for the Gemma query vector.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
