[package]
name = "hybrid-search-lambda"
version = "0.1.0"
edition = "2021"
publish = false

# The custom runtime expects a binary named `bootstrap`.
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# Same readers the browser runs: trigram Index / TermIndex+ImpactIndex (text arm) +
# VectorIndex + reciprocal_rank_fusion (vector arm + fusion). `terms` gates BM25/term,
# `vector` gates the IVFPQ reader + RRF.
roaringrange = { path = "../../rust", features = ["terms", "vector"] }
roaring = "0.11"
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde_json = "1"
# In-process EmbeddingGemma query embedder (replaces the cross-Lambda /embed hop):
# onnxruntime via `ort` (load-dynamic — the native lib ships in the container image, not
# linked at build), and the HF `tokenizers` crate (the same library the Python embed uses).
# fancy-regex (pure Rust) instead of the default onig C dep — keeps the container build
# toolchain-free; this tokenizer's Split is a literal-string pattern, so the engine choice
# is moot at runtime anyway.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
