[package]
name = "search-lambda"
version = "0.1.0"
edition = "2021"
publish = false

# The custom runtime expects a binary named `bootstrap`.
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# Reuse the reader as-is: same Index/search/RangeFetch the browser runs.
roaringrange = { path = "../../rust" }
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde_json = "1"
