[package]
name = "openalex-builder"
version = "0.1.0"
edition = "2021"
publish = false
description = "Parallel Rust builder for the OpenAlex RRS/RRSF demo index (no GC, no roaringsearch)"

[[bin]]
name = "openalex-build"
path = "src/main.rs"

[dependencies]
roaringrange = { path = "../../../rust", features = ["zstd"] }
roaring = "0.11"
rayon = "1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
ureq = "2"
futures = { version = "0.3", default-features = false, features = ["executor"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
